apps/tests/nginx/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nginx-ingress
spec:
  rules:
    - host: kubernetes.local
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /nginx
  # This section is only required if TLS is to be enabled for the Ingress
  # tls:
  #     - hosts:
  #         - www.xvitcoder.com
  #       secretName: example-tls
